test/tests/BadOverride.expected
BadOverride.frost:9:5: error: method anonymous.Sub1.foo():frost.core.Int is marked @override, but no matching method exists among its ancestors
BadOverride.frost:16:5: error: method anonymous.Sub2.foo():frost.core.String overrides function anonymous.Super.foo():frost.core.String, but methods cannot override functions
2 errors
